--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-core:'+ versions.log4j
     compile group: "org.cfg4j", name:"cfg4j-core", version: "4.4.0"
     compile group: "org.cfg4j", name:"cfg4j-consul", version: "4.4.0"
+    compile "com.amazonaws:aws-java-sdk-s3:1.11.109"
     compile('com.vividsolutions:jts:' + versions.jts) {
         exclude group: 'xerces'
     }
